# inmanta-dev-dependencies

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.ci/: Jenkinsfile-auto-release  Jenkinsfile-integration-test  ci-pyp.yml
.github/: dependabot.yml
src/inmanta_dev_dependencies/: __init__.py
