[tool.poetry]
name = "inmanta-dev-dependencies"
version = "2.76.0"
description = "Package collecting all common dev dependencies of inmanta modules and extensions to synchronize dependency versions."
authors = ["Inmanta <code@inmanta.com>"]
license = "Apache-2.0"
packages = [
    { include = "inmanta_dev_dependencies", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
black = "23.3.0"
flake8 = "6.0.0"
flake8-copyright = "0.2.4"
flake8-black = "0.3.6"
flake8-isort = "6.0.0"
isort = "5.12.0"
lxml = "4.9.3"
mypy = "1.4.1"
pytest = "7.4.0"
pep8-naming = "0.13.3"
pyadr = "0.19.0"

# Optional dependencies
pytest-inmanta-extensions = {version = ">=4.4", optional=true}
pytest-xdist = {version = "3.3.1", optional=true}


# These are test and direct dependencies of certain extensions. We use carret version
# constraints so that updates are possible.
asyncpg = {version = ">=0.21.0,<1.0.0", optional=true}
tornado = {version = "^6.1", optional=true}

[tool.poetry.extras]
module = ["pytest-inmanta"]
core = ["asyncpg", "pytest-env", "pytest-postgresql", "psycopg2", "tornado"]
extension = ["pytest-inmanta-extensions", "asyncpg", "pytest-env", "pytest-postgresql", "psycopg2", "tornado"]
async = ["pytest-asyncio", "pytest-timeout"]
pytest = ["pytest-env", "pytest-cover", "pytest-randomly", "pytest-xdist", "pytest-sugar", "pytest-instafail", "pytest-sugar", "pytest-instafail"]
sphinx = [
    "inmanta-sphinx", "sphinx-argparse", "sphinx-autodoc-annotation", "sphinx-tabs", "sphinx", "sphinxcontrib-serializinghtml",
    "sphinxcontrib-redoc", "sphinx-click", "recommonmark", "myst_parser"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
