[tool.poetry]
name = "inmanta-dev-dependencies"
version = "2.76.0"
description = "Package collecting all common dev dependencies of inmanta modules and extensions to synchronize dependency versions."
authors = ["Inmanta <code@inmanta.com>"]
license = "Apache-2.0"
packages = [
    { include = "inmanta_dev_dependencies", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
black = "23.3.0"
flake8 = "6.0.0"
flake8-copyright = "0.2.4"
flake8-black = "0.3.6"
flake8-isort = "6.0.0"
isort = "5.12.0"
lxml = "4.9.3"
mypy = "1.4.1"
pytest = "7.4.0"
pep8-naming = "0.13.3"
pyadr = "0.19.0"

# Optional dependencies
pytest-inmanta-extensions = {version = "*", optional=true}
pytest-xdist = {version = "3.3.1", optional=true}
